test/tests/nek_errors/invalid_field/nek.i
[Problem]
  type = NekRSProblem
  casename = 'pyramid'
[]

[Mesh]
  type = NekRSMesh
  volume = true
[]

[Executioner]
  type = Transient

  [TimeStepper]
    type = NekTimeStepper
  []
[]

[Postprocessors]
  [max]
    type = NekVolumeExtremeValue
    field = temperature
  []
[]
